# ms-nexus-tools

./: .gitignore  README.md  REUSE.toml  SIS_20260218_Elements_and_Isotopes.csv  conftest.py  pyproject.toml
benchmarks/: test_benchmarks.py
doc/: supersampling.png.license
src/ms_nexus_tools/: __init__.py  py.typed
src/ms_nexus_tools/api/: __init__.py  api.py  args.py  compound.py  data_convert.py  data_query.py  formula_args.py  image_and_spectrum_plot.py  image_args.py  image_plot.py  imzml.py  ion.py  kendrick_mass_defect_plot.py  mass_image.py  mass_range_args.py  spectrum_image.py  spectrum_plot.py  total_ion_count_plot.py  total_spectra_plot.py
src/ms_nexus_tools/api/args/: __init__.py  args.py  config_args.py  interactive_args.py
src/ms_nexus_tools/cli/: ION2RFI.py  compound.py  generate_mineral_map.py  inspect_h5.py  ion2rfi.py  mass_image.py  nx_data_stats.py  query.py  spectrum_image.py
src/ms_nexus_tools/lib/: __init__.py  bounds.py  chunker.py  chunking.py  contained_bounds.py  data_source.py  dtypes.py  elements.py  exceptions.py  filetypes.py  filter.py  h5_printer.py  image.py  multi_coo.py  mz_filter.py  normalisation.py  nxs.py  nxs_query_source.py  nxs_source.py  plot_utils.py  plotting.py  query_source.py  sparse_sampling.py  spectrum.py  timers.py  utils.py
tests/: test_args_action_parser.py  test_benchmarks.py  test_bounds.py  test_chunker.py  test_chunking.py  test_config_args.py  test_data_convert.py  test_image.py  test_imzml.py  test_ion.py  test_iterate.py  test_norms.py  test_percentiles.py  test_utils.py
tests/chunking/: test_max_item_count.py  test_min_chunks.py  test_min_item_count.py
tests/data/: man1.txt  man2.txt  man4.txt  man_source.py
tests/data_convert/: 8x8Men details.txt  colors.json  man3.txt  man_source.py  test.hdf5  test.nxs  test_data_convert.py
