# SPDX-FileCopyrightText: 2026 Duncan McDougall <duncan.mcdougall@rfi.ac.uk>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "ms-nexus-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datargs",
    "h5py>=3.15.1",
    "hypothesis>=6.151.7",
    "icecream>=2.1.10",
    "matplotlib>=3.10.8",
    "nexusformat>=2.0.1",
    "numpy>=2.4.2",
    "pyimzml",
    "pyside6>=6.10.2",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
]
license = "Apache-2.0"
license-files = ["LICENSES/*"]

[project.scripts]
profile = "ms_nexus_tools:profile"
compound = "ms_nexus_tools:compound"
massimage = "ms_nexus_tools:massimage"
specimage = "ms_nexus_tools:specimage"
inspect = "ms_nexus_tools:inspect"
test = "ms_nexus_tools:test"
query = "ms_nexus_tools:query"
bulk_query = "ms_nexus_tools:bulk_query"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
indent-width=4

[tool.ruff.lint]
select=['E4','E7','E9','F','N']

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest]
testpaths = ["./tests", "./src/"]
addopts = ["--doctest-modules", "--cov=./src/", "--cov-report=html", "--cov-branch"]

[tool.line_profiler.kernprof]
line-by-line = true
verbose = false
skip-zero = true
prof-mod = [ 'tmp.py', 'ms_nexus_tools']
prof-imports = true

[tool.typos.files]
extend-exclude=["elements.py", "SIS_20260218_Elements_and_Isotopes.csv"]

[tool.ty.analysis]
allowed-unresolved-imports = ["nexusformat.nexus.tree.NXparameters" ,"nexusformat.nexus.tree.NXinstrument"]

[tool.uv.sources]
datargs = { path = "../datargs", editable = true }
pyimzml = { path = "../pyimzML", editable = true }

[dependency-groups]
dev = [
    "line-profiler>=5.0.1",
    "pytest>=9.0.2",
    "pytest-autoprofile>=0.19.0",
    "pytest-cov>=7.0.0",
    "snakeviz>=2.2.2",
]
